--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ email-validator = "^2.2.0"
 flask = "^3.0.3"
 openai = "^1.50.2"
 flask-login = "^0.6.3"
+flask-migrate = "^4.0.7"
 
 
 [build-system]
